syntax = "proto3";

//option go_package = "./;hello";
option go_package="./;proto";

service HelloService {
  rpc ExecuteHi(HelloRequest) returns (HelloResponse) {};
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
}

message HelloResponse {
  string msg = 1;
}